@startuml
!theme plain

' ================================
' ENTIDADES PRINCIPAIS
' ================================
entity paciente {
  *id : INT <<PK>>
  nome : VARCHAR(100)
  dataNascimento : DATE
  endereco : VARCHAR(255)
  telefone : VARCHAR(20)
  telefoneEmergencia : VARCHAR(20)
  cpf: VARCHAR(14)
}

entity fichaTecnica {
  *id : INT <<PK>>
  paciente_id : INT <<FK>>
  historicoMedico : BOOLEAN
  medicamentos : BOOLEAN
  restricoesAlimentares : BOOLEAN
  procedimentosEspecificos : BOOLEAN
}

' ================================
' COMPONENTES DA FICHA TÉCNICA
' ================================


entity historicoMedico {
  *id : INT <<PK>>
  id_ficha : INT <<FK>>
  descricao : TEXT
  id_medico: INT <<FK>>
}

entity Medicamento {
  *id : INT <<PK>>
  id_ficha : INT <<FK>>
  nome : VARCHAR(100)
  dosagem : VARCHAR(100)
  viaAdministracao : VARCHAR(50)
  inicioTratamento : DATE
  fimTratamento : DATE
  ultima_aplicacao : DATETIME
  repetir: INT
  intervalo: INT
  diasMedicamento: VARCHAR(255)
  horasMedicamento: VARCHAR(255)
}

entity RestricaoAlimentar {
  *id : INT <<PK>>
  id_ficha : INT <<FK>>
  descricao : TEXT
}

entity procedimento {
  *id : INT <<PK>>
  nome : VARCHAR(100)
}

entity procedimentoEspecifico {
  *id : INT <<PK>>
  id_ficha : INT <<FK>>
  id_procedimento : INT <<FK>>
  horarios : VARCHAR(100)
  descricao : TEXT
}

entity medicos {
  *id: INT <<PK>>
  nome: VARCHAR(100)
  crm: VARCHAR(20)
  especialidade: VARCHAR(100)
  telefone: VARCHAR(20)
}

' ================================
' ENTIDADES DE REGISTROS
' ================================
entity documento {
  *id : INT <<PK>>
  tipo : INT
  paciente_id : INT <<FK>>
  descricao : VARCHAR(255)
  arquivo : LONGBLOB
}

entity agenda {
  *id : INT <<PK>>
  data : DATE
  atividade : VARCHAR(255)
  paciente_id : INT <<FK>>
}

entity relatorioDiario {
  *id : INT <<PK>>
  paciente_id : INT <<FK>>
  data : DATE
  conteudo : TEXT
}

' ================================
' RELACIONAMENTOS
' ================================

paciente ||--|{ fichaTecnica : "possui"
paciente ||--o{ documento : "possui"
paciente ||--o{ agenda : "tem"
paciente ||--o{ relatorioDiario : "tem"

fichaTecnica ||--o{ historicoMedico : "contém"
historicoMedico }|--|| medicos : "registrado por"
fichaTecnica ||--o{ Medicamento : "prescreve"
fichaTecnica ||--o{ RestricaoAlimentar : "detalha"
fichaTecnica ||--o{ procedimentoEspecifico : "aplica"
procedimento }|--|| procedimentoEspecifico : "é um"
@enduml
